# Automatizador-FilispiM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
radio_automator/: __init__.py  main.py
radio_automator/core/: config.py  database.py  event_bus.py  logger.py
radio_automator/services/: __init__.py  audio_engine.py  notification_service.py  play_queue.py  podcast_scheduler.py  podcast_service.py
radio_automator/ui/: __init__.py  about_dialog.py  config_panel.py  continuidad_panel.py  events_panel.py  file_dialogs.py  layout.py  log_viewer.py  parrilla_panel.py  playlist_editor.py  playlists_panel.py  podcasts_panel.py  shortcuts_dialog.py  status_bar.py  theme.py  toast_overlay.py  transport_bar.py
services/: audio_engine.py  automation_engine.py  folder_scanner.py  parrilla_service.py  play_queue.py  playlist_service.py
tests/: test_fase1.py  test_fase2.py  test_fase3.py  test_fase4.py  test_fase5.py  test_fase6.py  test_fase7.py
